--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+body {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.container {
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .hidden {
   display: none;
 }
@@ -6,4 +20,23 @@ button {
   border-style: none;
   background-color: rgba(0, 0, 0, 0);
   font-size: 30px;
+}
+
+#clock {
+  font-family: 'Black Han Sans', sans-serif;
+  font-size: 100px;
+
+  color: #eee;
+}
+
+#quote {
+  font-family: 'Hahmlet', serif;
+  font-weight: 200;
+  color: white;
+  font-size: 28px;
+}
+
+#quote > span {
+  padding: 3px 6px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
